Fix form actions overflow

--- a/app/assets/stylesheets/beyond_canvas/components/_forms.scss
+++ b/app/assets/stylesheets/beyond_canvas/components/_forms.scss
@@ -1,5 +1,5 @@
 %form__actions {
-  overflow: auto;
+  overflow: hidden;
 }
 
 .form {
